fix: align bug in firefox

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1789,6 +1789,7 @@ a.ui-button:active,
   background-position: center;
   background-repeat: no-repeat;
   margin-left: 15px;
+  vertical-align: middle;
 }
 
 .filters-list-wrapper {
